:icons: font

////
* Write changelog entries in present tense
* Include GitHub issue or PR if possible using link:http://...[#123] format
* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[v0.21.5]]
== 0.21.5 (TBD)

icon:plus[] REST: The amount of fields which will be returned can now be tuned using the `?fields` query parameter. The parameter can be used to improve the write performance by only including the `uuid` parameter in the response. 

icon:check[] REST: The node update response will now contain the updated node in the correct language. Any provided language parameter will be ignored.

[[v0.21.4]]
== 0.21.4 (09.07.2018)

icon:plus[] Migration: Segment path conflicts will now automatically be resolved during the node migration. Information about actions taken can be found within the response of the job migration.

icon:plus[] Migration: The node migration performance has been greatly enhanced. link:https://github.com/gentics/mesh/issues/453[#453]

icon:check[] Elasticsearch: Start up of Gentics Mesh will now fail early if the embedded Elasticsearch server can't be started. link:https://github.com/gentics/mesh/issues/445[#445]

icon:check[] Elasticsearch: The error logging has been enhanced. More detailed information will be logged if an index can't be created.

icon:check[] UI: Fixed potential encoding issues in the UI on systems which are not using the UTF-8 default character set.

icon:check[] Core: Fixed a bug that caused an unwanted schema migration when a schema update without any changes was invoked. This was the case with the `elasticsearch` properties.

[[v0.21.3]]
== 0.21.3 (19.06.2018)

icon:check[] GraphQL: Fixed a bug that caused an error when multiple queries where executed concurrently.
